cambio en filtrarInmuebles