@@ -19,7 +19,7 @@ public class SitioWeb {
 		List<Inmueble> inmueblesFiltrados = inmuebles.stream()
 		.filter(i -> i.getCiudad().equals(ciudad))
 		.filter(i -> i.estaDisponibleEnPeriodo(fechaEntrada, fechaSalida))
-		.collect(Collectors.toList());
+		.toList();
 		//nos faltan los nullsssssssss aaa
 		return inmueblesFiltrados;
 	}
